# memory-agent-risk-benchmark

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: synthetic_default.yaml
datasets/examples/: example_tasks.jsonl
docs/: research_findings_memory_governance.md
notebooks/: README.md
reports/: README.md
reports/example_synthetic_run/: pilot_experiment_report.md  synthetic_memory_experiment_runs.csv  synthetic_memory_experiment_summary.csv
src/marb/: analysis.py  cli.py  conditions.py  config.py  metrics.py  providers.py  simulator.py
tests/: test_analysis.py  test_config.py  test_simulator.py
